# TUI-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: callbacks.cpp  callbacks.h  colors.h  coords.cpp  coords.h  main.cpp  main.h  object.cpp  object.h
